2004-05-13 Borut Razem <borut.razem AT siol.net>

	* index.html: info about SDCC 2.5.0 release
	* ChangeLog created