@@ -342,6 +342,11 @@ Michael Hope &lt;michaelh.AT.juju.net.nz&gt;</a>
 
  - initial Z80 port, additional coding and bug fixes.</li>
 
+<li><a href="mailto:sourceforge.brock.AT.dse.nl">
+Maarten Brock &lt;sourceforge.brock.AT.dse.nl&gt;</a>
+
+ -</li>
+
 </ul>
 
 <p>SDCC has had help from a number of external sources, including:
